# usrp_marine_radar

./: README  all_usrp_dev_props.txt  interfacing_USRP_to_5V_circuit_msg00528.html
fpga/usrp1/: Makefile  Makefile.in
fpga/usrp1/include/: fpga_regs_common.v  fpga_regs_marine_radar.h  fpga_regs_marine_radar.v
fpga/usrp1/rbf/: Makefile.in
fpga/usrp1/rbf/rev2/: Makefile.in
fpga/usrp1/rbf/rev4/: Makefile.in
fpga/usrp1/sdr_lib/: adc_interface_bbprx.v  adc_interface_marine_radar.v  averaging_decim.v  bbprx_buffer.v  buffer_with_header.v  decim.v  feed_fifo.v  interleave.v  io_pins.v  marine_radar_buffer.v  master_control_bbprx.v  master_control_marine_radar.v  multiplex.v  pack_metadata.v  simple_decim.v  spi.v  spi_adis16209.v  trigger_gen.v
fpga/usrp1/toplevel/usrp_marine_radar/: usrp_marine_radar.csf  usrp_marine_radar.esf  usrp_marine_radar.map.smsg  usrp_marine_radar.pin  usrp_marine_radar.psf  usrp_marine_radar.qpf  usrp_marine_radar.qsf  usrp_marine_radar.rbf  usrp_marine_radar.sdc  usrp_marine_radar.sof  usrp_marine_radar.v
src/: CMakeLists.txt  pulse_buffer.cc  pulse_buffer.h  test_usrp_marine_radar.cc  test_usrp_pulse_buffer.cc  test_usrp_radR_plugin.cc  usrp_marine_radar.cc  usrp_marine_radar.h  usrp_radR_plugin.cc  usrp_radR_plugin.h  usrp_radar_client.h  usrp_radar_server.h
